--- a/src/app/_shared/components/chart-line/chart-line.component.scss
+++ b/src/app/_shared/components/chart-line/chart-line.component.scss
@@ -1,5 +1,7 @@
 .graph {
 	background: white;
+	font-family: 'Roboto', 'Open Sans', sans-serif;
+	font-size: 12px;
 
 	.graph__horizontal,
 	.graph__vertical,
