chore: add chart-line in home

--- a/src/app/_shared/components/chart-line/chart-line.component.html
+++ b/src/app/_shared/components/chart-line/chart-line.component.html
@@ -30,7 +30,7 @@
 				[attr.x2]="pointer.x2"
 				[attr.y2]="pointer.y2"
 				[attr.stroke]="pointer.color"
-				stroke="black"
+				[attr.stroke-width]="pointer.strokeWidth"
 			/>
 			<circle
 				*ngFor="let circle of svgCircleMatrix.matrix[i]"
