--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
 <div>
-	<app-chart-line />
+	<app-chart-line
+		[width]="400"
+		[height]="300"
+		[xLabels]="['jan', 'feb', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']"
+		[yLabels]="[0, 100, 200, 300, 400, 500, 600]"
+		[colors]="['#2d63d7', '#4bbd4b', '#FFA500', '#800080', '#A52A2A', '#FF6F61', '#0F52BA', '#50C878']"
+		[data]="[ [0, 170.2, 180.1, 170.7, 200, 500, 600, 600], [50.01, 100.2, 280.1, 370.7, 360.8, 500.7, 0], [50, 100, 250, 300, 390, 300, 20, '10']]"
+		[circleSize]="6"
+	/>
 </div>
 
 
