--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,37 @@
 		[xLabels]="['jan', 'feb', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']"
 		[yLabels]="[0, 100, 200, 300, 400, 500, 600]"
 		[colors]="['#2d63d7', '#4bbd4b', '#FFA500', '#800080', '#A52A2A', '#FF6F61', '#0F52BA', '#50C878']"
-		[data]="[ [0, 170.2, 180.1, 170.7, 200, 500, 600, 600], [50.01, 100.2, 280.1, 370.7, 360.8, 500.7, 0], [50, 100, 250, 300, 390, 300, 20, '10']]"
+		[data]="[
+			[0, 170.2, 180.1, 170.7, 200, 500, 600, 600],
+			[50.01, 100.2, 280.1, 370.7, 360.8, 500.7, 0],
+			[50, 100, 250, 300, 390, 300, 20, '10']
+		]"
 		[circleSize]="6"
 	/>
 </div>
 
-
 <div>
-	<div>2</div>
-</div>
+	<!--	<app-chart-donut-half-->
+	<!--		[values]="[ { color: '#4caf50', value: 25 }, { color: '#ffeb3b', value: 50 }, { color: '#f44336', value: 25 } ]"-->
+	<!--		[width]="300"-->
+	<!--		[height]="150"-->
+	<!--		[thickness]="30"-->
+	<!--	>-->
+	<!--	</app-chart-donut-half>-->
 
+	<app-chart-donut-half
+		[values]="[
+			{ color: '#2d63d7', value: 5 },
+			{ color: '#4bbd4b', value: 5 },
+			{ color: '#FFA500', value: 5 },
+			{ color: '#800080', value: 5 },
+			{ color: '#A52A2A', value: 5 },
+			{ color: '#FF6F61', value: 5 },
+			{ color: '#0F52BA', value: 20 },
+			{ color: '#50C878', value: 50 }
+		]"
+	/>
+</div>
 
 <div>
 	<div>3</div>
