feat: chart-donut-half

--- a/src/app/_shared/components/chart-donut-half/chart-donut-half.component.scss
+++ b/src/app/_shared/components/chart-donut-half/chart-donut-half.component.scss
@@ -1,6 +1,9 @@
 :host {
-	background: white;
 	font-family: 'Roboto', 'Open Sans', sans-serif;
-	font-size: 13px;
+	font-size: 12px;
 	font-weight: 600;
+
+	.graph {
+		background: white;
+	}
 }
