--- a/src/app/_shared/components/chart-donut-half/chart-donut-half.component.html
+++ b/src/app/_shared/components/chart-donut-half/chart-donut-half.component.html
@@ -1,18 +1,18 @@
-<svg [attr.width]="width" [attr.height]="height">
+<svg class="graph" [attr.width]="width" [attr.height]="height">
 	<g [attr.transform]="centerTranslation">
 		<path *ngFor="let segment of segments" [attr.fill]="segment.color" [attr.d]="segment.d"></path>
 		<ng-container *ngFor="let segment of segments">
-			<text
-				[attr.x]="segment.labelPosition.x"
-				[attr.y]="segment.labelPosition.y"
-				[attr.transform]="
-					'rotate(' + segment.rotation + ' ' + segment.labelPosition.x + ' ' + segment.labelPosition.y + ')'
-				"
-				text-anchor="middle"
-				alignment-baseline="baseline"
-			>
-				{{ segment.value }}%
-			</text>
+			<ng-container *ngFor="let letter of segment.letters">
+				<text
+					[attr.x]="letter.position.x"
+					[attr.y]="letter.position.y"
+					[attr.transform]="'rotate(' + letter.rotation + ' ' + letter.position.x + ' ' + letter.position.y + ')'"
+					text-anchor="middle"
+					alignment-baseline="middle"
+				>
+					{{ letter.letter }}
+				</text>
+			</ng-container>
 		</ng-container>
 	</g>
 </svg>
