--- a/src/app/_shared/components/chart-line/chart-line.component.html
+++ b/src/app/_shared/components/chart-line/chart-line.component.html
@@ -7,6 +7,8 @@
 			[attr.x2]="line.x2"
 			[attr.y2]="line.y2"
 			[attr.stroke-dasharray]="line.strokeDasharray"
+			[attr.stroke-width]="line.strokeWidth"
+			[attr.stroke]="line.color"
 		/>
 	</g>
 
