--- a/src/app/_shared/components/chart-donut-half/chart-donut-half.component.html
+++ b/src/app/_shared/components/chart-donut-half/chart-donut-half.component.html
@@ -1,16 +1,24 @@
 <svg class="graph" [attr.width]="width" [attr.height]="height">
-	<path *ngFor="let segment of segments" [attr.fill]="segment.color" [attr.d]="segment.d"></path>
+	<path *ngFor="let segment of segments" [attr.fill]="segment.color" [attr.d]="segment.dataType"></path>
 	<ng-container *ngFor="let segment of segments">
 		<ng-container *ngFor="let letter of segment.letters">
 			<text
+				class="graph__segment-text"
 				[attr.x]="letter.position.x"
 				[attr.y]="letter.position.y"
 				[attr.transform]="'rotate(' + letter.rotation + ' ' + letter.position.x + ' ' + letter.position.y + ')'"
 				text-anchor="middle"
 				alignment-baseline="middle"
 			>
-				{{ letter.letter }}
+				{{ letter.text }}
 			</text>
 		</ng-container>
 	</ng-container>
+	<text class="graph__title" x="50%" y="60%" text-anchor="middle" alignment-baseline="middle">
+		{{ this.data.title }}
+	</text>
+
+	<text class="graph__sum" x="50%" y="70%" text-anchor="middle" alignment-baseline="middle">
+		{{ sumValues() }}
+	</text>
 </svg>
