--- a/src/app/_shared/components/chart-line/chart-line.component.html
+++ b/src/app/_shared/components/chart-line/chart-line.component.html
@@ -1,4 +1,12 @@
-<svg class="graph" [attr.width]="width" [attr.height]="height">
+<svg
+	class="graph"
+	[attr.width]="width"
+	[attr.height]="height"
+	appChartResize
+	[resizeEnable]="enableAutoWidth"
+	[resizeInitialWidth]="width"
+	(resizeChanged)="onWidthChanged($event)"
+>
 	<g class="graph__line-horizontal--dashed">
 		<line
 			*ngFor="let line of svgLineDashed"
