--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,28 @@
 $gap: 10px;
+$min-item-width: 350px;
 
 :host {
-	background: darkgrey;
-	width: calc(100vw - $gap * 2);
-	height: calc(100vh - $gap * 2);
+	background: lightgray;
+	min-width: calc(100vw - $gap * 2);
+	min-height: calc(100vh - $gap * 2);
 	display: flex;
 	flex-wrap: wrap;
 	padding: $gap;
 	gap: $gap;
 
 	> div {
-		background: lightgray;
 		flex-grow: 1;
-		flex-basis: 300px;
-		padding: $gap;
+		flex-basis: $min-item-width;
+
+		@media screen and (min-width: calc(2 * #{$min-item-width} + $gap)) {
+			min-width: calc(50% - $gap);
+		}
+		@media screen and (min-width: calc(3 * #{$min-item-width} + $gap)) {
+			min-width: calc(33.333% - $gap);
+		}
 
 		> * {
-			background: cadetblue;
+			background: white;
 			width: 100%;
 			height: 100%;
 			display: flex;
@@ -25,3 +31,55 @@ $gap: 10px;
 		}
 	}
 }
+
+:host {
+	> div {
+		display: flex;
+		flex-direction: column;
+
+		h2 {
+			font: 14px Menlo;
+			margin: 0;
+			justify-content: left;
+			padding: 20px 0 0 20px;
+			height: auto;
+			width: auto;
+			color: darkgray;
+		}
+	}
+}
+
+//$min-item-width: 300px;
+//$gap: 20px;
+//
+//:host {
+//	background: darkgrey;
+//	display: flex;
+//	flex-wrap: wrap;
+//	justify-content: flex-start;
+//	gap: $gap/2;
+//	width: 100vw;
+//	height: 100vh;
+//
+//	> div {
+//		display: flex;
+//		align-items: center;
+//		justify-content: center;
+//		background-color: lightgray;
+//		flex: 1 1 auto;
+//		min-width: $min-item-width;
+//		width: 100%;
+//
+//		@media screen and (min-width: calc(2 * #{$min-item-width} + $gap)) {
+//			min-width: calc(50% - $gap);
+//		}
+//		@media screen and (min-width: calc(3 * #{$min-item-width} + $gap)) {
+//			min-width: calc(33.333% - $gap);
+//		}
+//
+//		> * {
+//			padding: $gap/2;
+//			background: cadetblue;
+//		}
+//	}
+//}
