feat: add dinamic array to y chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,8 @@
 		[gap]="30"
 		[colors]="['#2d63d7', '#4bbd4b', '#FFA500', '#FF6F61', '#0F52BA', '#50C878', '#A52A2A']"
 		[xTexts]="['jan', 'feb', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']"
-		[yTexts]="[0, 100, 200, 300, 400, 500, 600]"
-		[data]="[
-			[0, 170.2, 180.1, 170.7, 200, 500, 600, 600],
-			[50.01, 100.2, 280.1, 370.7, 360.8, 500.7, 0],
-			[50, 100, 250, 300, 390, 300, 20, '10']
-		]"
+		[yTexts]="chartLineTextList"
+		[data]="chartLineData"
 		[enableAutoWidth]="true"
 	/>
 </div>
